2009-01-27  Petr Mikulik  <mikulik@physics.muni.cz>

	*  src/pm3d.c (pm3d_plot): Fix for "set pm3d depthorder" ignoring
	"set pm3d interpolate".

2009-01-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_make_header PS_image): Since the beginning of pm3d,
	the "/Color def" switched between gray and colour map. Choosing "false"
	for "Color", the gray map was always selected regardless the use of a
	custom palette. This led to ambiguities for custom colour palettes if
	they contain grays only. Thus let postscript choose always colour
	palette for interpolated colours ('set palette defined', 'set palette
	file') and colour/gray according to "Color" otherwise ('set palette
	gray', 'set palette rgb').
	SF Patch #2516634: custom colormap using postscript term

2009-01-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Back-port changes to svg terminal driver from 4.3 CVS.
	This adds support for dashed lines, additional color modes,
	more standard xml syntax for attributes, and a work-around for viewers
	that fail to correctly inherit <text xml:space="preserve">

2009-01-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/fit.c (fit_command):  Issue a warning if no fittable parameters
	are found.
	Bug #1964774

2009-01-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c: Replace the file util.c with the correct file for this
	CVS branch.  Somehow the copy from the 4.3 branch got incorrectly
	duplicated here.

2009-01-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/gplt_x11.c (process_event): Change the status bar of a non-active
	or persistent window only for almost2d plot.

	* src/gplt_x11.c (exec_cmd): Add field almost2d to plot_struct and set
	it according to sent ALMOST2D.

	* term/x11.trm (X11_text): Send information about ALMOST2D.

	* src/gadgets.h src/mouse.c: Move definition of macro ALMOST2D to
	gadgets.h.

2009-01-13  Petr Mikulik  <mikulik@physics.muni.cz>
